<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cardconnect.MainActivity">


    <include
...
            android:layout_centerInParent="true"
            android:text="@string/message_read_tag"
            android:background="@drawable/round_rect_button"
            style="@style/Widget.AppCompat.Button.Colored"/>

    <Button
        android:id="@+id/btn_profile"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="168dp"
        android:layout_height="164dp"
        android:layout_below="@+id/btn_read"
        android:layout_centerInParent="true"
        android:layout_marginTop="-305dp"
...
